# 228604

./: LICENSE  README  generate_plots.sh  qif_diff_app.sim  run_make_view_into  run_simulation  run_simulations.sh  shotnoise_examples.ipynb  sn_fpt_theo.sim  sn_sig.sim  sn_spont.sim
grace_plot/: __init__.py  example_plot.py  exampleplot.agr  exampleplot.eps  exampleplot.par  grace_plot.py
grace_plot/pygrace/: gracePlot.py  grace_np.py  graceplot_test.py
plots/cv_over_a/: parameters  plot.py
plots/cv_over_a/qif/: parameters  plot.par
plots/cv_over_a/qif/diffapp/: parameters
plots/cv_over_a/qif/theo/: parameters
plots/power_spectrum/: parameters  plot.par  plot.py
plots/probability_density/: plot.py
plots/probability_density/eif/: parameters  plot.par  plot.py
plots/probability_density/lif/: grace.par  parameters  plot.py
plots/r0_over_rin_e/: parameters
plots/r0_over_rin_e/eif/: parameters  plot.par  plot.py
plots/r0_over_rin_e/lif/: parameters  plot.par  plot.py
plots/r0_over_rin_e/lif/lowrin/: grace.par  parameters  plot.py
plots/suscep/: parameters
plots/suscep/current_modulation/: parameters  plot.par  plot.py
plots/suscep/current_modulation/cosstim/: parameters  plot.par  plot.py
simulation/: CMakeLists.txt  fpt_gsl_sn.cpp  git_info.cpp.in  git_info.h  integrator.h  param_gen.py  parameters  qif_diffap.cpp  sn_sig.cpp  sn_spont.cpp
simulation/neurophys/: array.h  array_funcs.cpp  array_funcs.h  averager.h  dynamic_histogram.h  fano.h  fourier_transform.cpp  fourier_transform.h  histogram_funcs.cpp  histogram_funcs.h  rng.h  scc.h  signal.cpp  signal.h  spike_train.cpp  spike_train.h  spike_train_spectrum.cpp  spike_train_spectrum.h  synapse.cpp  synapse.h
